[package]
name = "tree-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.78"
clap = { version = "4.0.32", features = ["color", "deprecated", "wrap_help", "cargo", "derive", "env"] }
color-eyre = "0.6.2"
cozo = "0.4.1"
guess_host_triple = "0.1.3"
ignore = "0.4.19"
indoc = "1.0.8"
libloading = "0.7.4"
rayon = "1.6.1"
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
tree-sitter = "0.20.9"
